fixed layout issues

--- a/public/stylesheets/reset.css
+++ b/public/stylesheets/reset.css
@@ -11,10 +11,6 @@ a {
   box-sizing: border-box;
 }
 
-<<<<<<< HEAD
-h1, h2, h3, h4, h5, h6, a, ol, li, ul, div, span,
-body, header, nav {
-=======
 h1,
 h2,
 h3,
@@ -29,7 +25,6 @@ span,
 body,
 header,
 nav {
->>>>>>> main
   font-size: 1rem;
   color: inherit;
   background-color: transparent;
